[Add + Fix] RSpec and Swagger

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,8 @@ Lint/MissingSuper:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
+
+# Disabled for RSpec
+Metrics/BlockLength:
+  Exclude:
+    - "spec/**/*"
