[Add] User password and validation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,3 +23,4 @@ Style/ClassAndModuleChildren:
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
+    - "app/controllers/concerns/api/v1/rescue_exceptions.rb"
