[Add] Swagger for PR #7

--- a/public/api/v1/index.yaml
+++ b/public/api/v1/index.yaml
@@ -4,6 +4,11 @@ info:
   title: API V1
   version: v1
 paths:
+  # Authentication
+  /api/v1/login:
+    $ref: paths/sessions.yaml#login
+
+  # Admin/User
   /api/v1/admin/users/{id}:
     $ref: paths/admin/users.yaml#show
 servers:
